# MSc-projects

./: README.md
Aplicações e Serviços de Computação em Nuvem/code/: Benchmarking1.jmx  Benchmarking2.jmx  jmeter-deploy.yml  laravelio-deploy.yml  laravelio-undeploy.yml
Aplicações e Serviços de Computação em Nuvem/code/docker/: Dockerfile  script.sh
Aplicações e Serviços de Computação em Nuvem/code/inventory/: gcp.yml
Computação Paralela/Work Assignment 1/code/: Makefile
Computação Paralela/Work Assignment 2/code/: Makefile
Computação Paralela/Work Assignment 3/code/: Makefile  script.sh
Dados e Aprendizagem Automática/Competition/: Competition.ipynb
Dados e Aprendizagem Automática/Competition/Test/: meteo_202301-202304.csv
Dados e Aprendizagem Automática/Competition/Train/: energia_202109-202112.csv
Dados e Aprendizagem Automática/Grupo22/: ResultsPrediction.ipynb
Engenharia Gramatical/Trabalho Prático 2/: dataToHTML.py  scanalyzer.py
Engenharia de Segurança/Projeto de Desenvolvimento 1/: README.md  assignment.md
Engenharia de Segurança/Projeto de Desenvolvimento 2/: README.md  assignment.md
Engenharia de Serviços em Rede/code/src/: client.py  (+12 more)
Projeto de Informática/: README.md.md
Scripting no Processamento de Linguagem Natural/Trabalho Prático 1/: README.md  pyproject.toml  sentiment_comparator.py  sentiment_testing.py
Scripting no Processamento de Linguagem Natural/Trabalho Prático 1/gsadz/: __init__.py
Scripting no Processamento de Linguagem Natural/Trabalho Prático 2/: README.md
Tecnologias de Segurança/Trabalho Prático 3/: README.md
(+147 files in other folders)
